--- a/VeKa/Resourses/Storyboard/Base.lproj/Main.storyboard
+++ b/VeKa/Resourses/Storyboard/Base.lproj/Main.storyboard
@@ -582,21 +582,84 @@
             </objects>
             <point key="canvasLocation" x="3787" y="415"/>
         </scene>
-        <!--View Controller-->
+        <!--News View Controller-->
         <scene sceneID="r1p-Wr-mLL">
             <objects>
-                <viewController id="B6C-Zf-gL6" sceneMemberID="viewController">
+                <viewController id="B6C-Zf-gL6" customClass="NewsViewController" customModule="VeKa" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Rzg-1f-rXz">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PBR-bU-MQw">
+                                <rect key="frame" x="0.0" y="56" width="414" height="703"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="newsIdentifier" rowHeight="617" id="fxR-Cn-E6P" customClass="NewsTableViewCell" customModule="VeKa" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="617"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fxR-Cn-E6P" id="hbO-Ko-l4x">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="617"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Vtt-8B-ojg">
+                                                    <rect key="frame" x="8" y="8" width="398" height="398"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="Vtt-8B-ojg" secondAttribute="height" multiplier="1:1" id="TOk-Fa-7jC"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1P9-qX-oP2">
+                                                    <rect key="frame" x="191" y="416" width="32" height="34"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tjv-nK-wkf" customClass="LikesView" customModule="VeKa" customModuleProvider="target">
+                                                    <rect key="frame" x="147" y="460" width="120" height="30"/>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="tjv-nK-wkf" secondAttribute="height" multiplier="4:1" id="IUb-uo-2yx"/>
+                                                        <constraint firstAttribute="height" constant="30" id="J8e-yR-s1y"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="tjv-nK-wkf" firstAttribute="top" secondItem="1P9-qX-oP2" secondAttribute="bottom" constant="10" id="5Gf-ef-p0p"/>
+                                                <constraint firstItem="tjv-nK-wkf" firstAttribute="centerX" secondItem="hbO-Ko-l4x" secondAttribute="centerX" id="DTd-Gp-uAu"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="tjv-nK-wkf" secondAttribute="bottom" constant="10" id="IEs-X7-eMW"/>
+                                                <constraint firstAttribute="trailing" secondItem="Vtt-8B-ojg" secondAttribute="trailing" constant="8" id="NY1-af-Jag"/>
+                                                <constraint firstItem="1P9-qX-oP2" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="hbO-Ko-l4x" secondAttribute="leading" constant="8" id="NZh-f1-qeP"/>
+                                                <constraint firstItem="Vtt-8B-ojg" firstAttribute="leading" secondItem="hbO-Ko-l4x" secondAttribute="leading" constant="8" id="NaD-Wm-jbQ"/>
+                                                <constraint firstItem="1P9-qX-oP2" firstAttribute="centerX" secondItem="hbO-Ko-l4x" secondAttribute="centerX" id="dr9-iy-W2b"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="1P9-qX-oP2" secondAttribute="trailing" constant="8" id="gOa-M8-opY"/>
+                                                <constraint firstItem="1P9-qX-oP2" firstAttribute="top" secondItem="Vtt-8B-ojg" secondAttribute="bottom" constant="10" id="rdn-RU-nAS"/>
+                                                <constraint firstItem="Vtt-8B-ojg" firstAttribute="top" secondItem="hbO-Ko-l4x" secondAttribute="top" constant="8" id="zJK-Kp-qaa"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="newsImage" destination="Vtt-8B-ojg" id="XtA-jf-9Xw"/>
+                                            <outlet property="newsLikeView" destination="tjv-nK-wkf" id="gXi-o6-2KC"/>
+                                            <outlet property="newsText" destination="1P9-qX-oP2" id="RTf-zZ-PrS"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="Y6I-uQ-KIi" firstAttribute="trailing" secondItem="PBR-bU-MQw" secondAttribute="trailing" id="EAa-vp-VfX"/>
+                            <constraint firstItem="PBR-bU-MQw" firstAttribute="leading" secondItem="Y6I-uQ-KIi" secondAttribute="leading" id="O75-IN-0aO"/>
+                            <constraint firstItem="Y6I-uQ-KIi" firstAttribute="bottom" secondItem="PBR-bU-MQw" secondAttribute="bottom" id="Vd4-Tx-bKK"/>
+                            <constraint firstItem="PBR-bU-MQw" firstAttribute="top" secondItem="Y6I-uQ-KIi" secondAttribute="top" id="xng-xq-xlJ"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Y6I-uQ-KIi"/>
                     </view>
                     <navigationItem key="navigationItem" id="URR-3T-sDg"/>
+                    <connections>
+                        <outlet property="newsTableView" destination="PBR-bU-MQw" id="dIq-f1-W8e"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="G9Q-Pw-SIB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1219" y="1475"/>
+            <point key="canvasLocation" x="1218.840579710145" y="1474.5535714285713"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Tnn-qo-Lil">
@@ -638,7 +701,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="news" width="100" height="100"/>
+        <image name="news" width="33.333332061767578" height="33.333332061767578"/>
         <image name="person.3.fill" catalog="system" width="72" height="35"/>
         <image name="person.crop.square" catalog="system" width="64" height="56"/>
         <image name="text.badge.plus" catalog="system" width="64" height="56"/>
