--- a/VeKa/Resourses/Storyboard/Base.lproj/Main.storyboard
+++ b/VeKa/Resourses/Storyboard/Base.lproj/Main.storyboard
@@ -607,37 +607,38 @@
                                                         <constraint firstAttribute="width" secondItem="Vtt-8B-ojg" secondAttribute="height" multiplier="1:1" id="TOk-Fa-7jC"/>
                                                     </constraints>
                                                 </imageView>
-                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1P9-qX-oP2">
-                                                    <rect key="frame" x="191" y="416" width="32" height="34"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <textInputTraits key="textInputTraits"/>
-                                                </textField>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tjv-nK-wkf" customClass="LikesView" customModule="VeKa" customModuleProvider="target">
-                                                    <rect key="frame" x="147" y="460" width="120" height="30"/>
+                                                    <rect key="frame" x="147" y="446.5" width="120" height="30"/>
                                                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="tjv-nK-wkf" secondAttribute="height" multiplier="4:1" id="IUb-uo-2yx"/>
                                                         <constraint firstAttribute="height" constant="30" id="J8e-yR-s1y"/>
                                                     </constraints>
                                                 </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tX5-d5-T9O">
+                                                    <rect key="frame" x="186" y="416" width="42" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="tjv-nK-wkf" firstAttribute="top" secondItem="1P9-qX-oP2" secondAttribute="bottom" constant="10" id="5Gf-ef-p0p"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="tX5-d5-T9O" secondAttribute="trailing" constant="8" id="4aW-uM-tMj"/>
+                                                <constraint firstItem="tX5-d5-T9O" firstAttribute="centerX" secondItem="hbO-Ko-l4x" secondAttribute="centerX" id="6hp-Sr-aqk"/>
                                                 <constraint firstItem="tjv-nK-wkf" firstAttribute="centerX" secondItem="hbO-Ko-l4x" secondAttribute="centerX" id="DTd-Gp-uAu"/>
                                                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="tjv-nK-wkf" secondAttribute="bottom" constant="10" id="IEs-X7-eMW"/>
+                                                <constraint firstItem="tX5-d5-T9O" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="hbO-Ko-l4x" secondAttribute="leading" constant="8" id="K5W-0e-sS6"/>
+                                                <constraint firstItem="tjv-nK-wkf" firstAttribute="top" secondItem="tX5-d5-T9O" secondAttribute="bottom" constant="10" id="LCz-Ij-kqQ"/>
                                                 <constraint firstAttribute="trailing" secondItem="Vtt-8B-ojg" secondAttribute="trailing" constant="8" id="NY1-af-Jag"/>
-                                                <constraint firstItem="1P9-qX-oP2" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="hbO-Ko-l4x" secondAttribute="leading" constant="8" id="NZh-f1-qeP"/>
                                                 <constraint firstItem="Vtt-8B-ojg" firstAttribute="leading" secondItem="hbO-Ko-l4x" secondAttribute="leading" constant="8" id="NaD-Wm-jbQ"/>
-                                                <constraint firstItem="1P9-qX-oP2" firstAttribute="centerX" secondItem="hbO-Ko-l4x" secondAttribute="centerX" id="dr9-iy-W2b"/>
-                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="1P9-qX-oP2" secondAttribute="trailing" constant="8" id="gOa-M8-opY"/>
-                                                <constraint firstItem="1P9-qX-oP2" firstAttribute="top" secondItem="Vtt-8B-ojg" secondAttribute="bottom" constant="10" id="rdn-RU-nAS"/>
+                                                <constraint firstItem="tX5-d5-T9O" firstAttribute="top" secondItem="Vtt-8B-ojg" secondAttribute="bottom" constant="10" id="kpU-e8-JC9"/>
                                                 <constraint firstItem="Vtt-8B-ojg" firstAttribute="top" secondItem="hbO-Ko-l4x" secondAttribute="top" constant="8" id="zJK-Kp-qaa"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="newsImage" destination="Vtt-8B-ojg" id="XtA-jf-9Xw"/>
                                             <outlet property="newsLikeView" destination="tjv-nK-wkf" id="gXi-o6-2KC"/>
-                                            <outlet property="newsText" destination="1P9-qX-oP2" id="RTf-zZ-PrS"/>
+                                            <outlet property="newsText" destination="tX5-d5-T9O" id="7fJ-cn-Iui"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
