--- a/VeKa/Resourses/Storyboard/Base.lproj/Main.storyboard
+++ b/VeKa/Resourses/Storyboard/Base.lproj/Main.storyboard
@@ -521,8 +521,25 @@
                                             <rect key="frame" x="0.0" y="0.0" width="290" height="434"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4wC-aa-xW1">
+                                                    <rect key="frame" x="-20" y="30" width="330" height="290"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nZu-TW-CVL">
+                                                            <rect key="frame" x="20" y="0.0" width="290" height="290"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" secondItem="nZu-TW-CVL" secondAttribute="height" multiplier="1:1" id="xab-ou-2Bj"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="nZu-TW-CVL" firstAttribute="width" secondItem="4wC-aa-xW1" secondAttribute="width" constant="-40" id="1oA-eg-h59"/>
+                                                        <constraint firstItem="nZu-TW-CVL" firstAttribute="height" secondItem="4wC-aa-xW1" secondAttribute="height" id="HKV-uE-AAA"/>
+                                                        <constraint firstItem="nZu-TW-CVL" firstAttribute="centerY" secondItem="4wC-aa-xW1" secondAttribute="centerY" id="ToY-ge-pUe"/>
+                                                        <constraint firstItem="nZu-TW-CVL" firstAttribute="centerX" secondItem="4wC-aa-xW1" secondAttribute="centerX" id="eME-Ho-hN8"/>
+                                                    </constraints>
+                                                </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BQh-Ex-gOf">
-                                                    <rect key="frame" x="124" y="350" width="42" height="21"/>
+                                                    <rect key="frame" x="124" y="310" width="42" height="21"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="21" id="4tL-DB-877"/>
                                                     </constraints>
@@ -531,31 +548,27 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eTZ-0E-9XU" customClass="LikesView" customModule="VeKa" customModuleProvider="target">
-                                                    <rect key="frame" x="124" y="391" width="120" height="30"/>
+                                                    <rect key="frame" x="124" y="351" width="120" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="eTZ-0E-9XU" secondAttribute="height" multiplier="4:1" id="kV0-ZJ-PRj"/>
                                                         <constraint firstAttribute="height" constant="30" id="mev-S7-rE4"/>
                                                     </constraints>
                                                 </view>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nZu-TW-CVL">
-                                                    <rect key="frame" x="0.0" y="50" width="290" height="290"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" secondItem="nZu-TW-CVL" secondAttribute="height" multiplier="1:1" id="xab-ou-2Bj"/>
-                                                    </constraints>
-                                                </imageView>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="BQh-Ex-gOf" firstAttribute="centerX" secondItem="F0d-kg-mbe" secondAttribute="centerX" id="DHH-5g-Cat"/>
-                                                <constraint firstItem="nZu-TW-CVL" firstAttribute="centerX" secondItem="F0d-kg-mbe" secondAttribute="centerX" id="IY4-d4-Ejy"/>
+                                                <constraint firstItem="4wC-aa-xW1" firstAttribute="centerX" secondItem="F0d-kg-mbe" secondAttribute="centerX" id="G6y-Ew-1LW"/>
+                                                <constraint firstItem="4wC-aa-xW1" firstAttribute="leading" secondItem="F0d-kg-mbe" secondAttribute="leading" constant="-20" id="KBv-n3-aXA"/>
+                                                <constraint firstItem="4wC-aa-xW1" firstAttribute="top" secondItem="F0d-kg-mbe" secondAttribute="top" constant="30" id="KaK-ck-tHF"/>
                                                 <constraint firstItem="eTZ-0E-9XU" firstAttribute="leading" secondItem="BQh-Ex-gOf" secondAttribute="leading" id="REv-xe-JwY"/>
-                                                <constraint firstItem="nZu-TW-CVL" firstAttribute="top" secondItem="F0d-kg-mbe" secondAttribute="top" constant="50" id="cmt-JU-8Fw"/>
-                                                <constraint firstItem="BQh-Ex-gOf" firstAttribute="top" secondItem="nZu-TW-CVL" secondAttribute="bottom" constant="10" id="mXh-Zb-pCB"/>
+                                                <constraint firstItem="eTZ-0E-9XU" firstAttribute="top" secondItem="4wC-aa-xW1" secondAttribute="bottom" constant="31" id="cuP-ha-U5s"/>
                                                 <constraint firstItem="eTZ-0E-9XU" firstAttribute="top" secondItem="BQh-Ex-gOf" secondAttribute="bottom" constant="20" id="nHb-5i-9Cy"/>
-                                                <constraint firstItem="nZu-TW-CVL" firstAttribute="width" secondItem="F0d-kg-mbe" secondAttribute="width" id="piq-R7-xan"/>
+                                                <constraint firstAttribute="trailing" secondItem="4wC-aa-xW1" secondAttribute="trailing" constant="-20" id="uua-Gt-1PZ"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="290" height="434"/>
                                         <connections>
+                                            <outlet property="animateView" destination="4wC-aa-xW1" id="YWw-EB-6v5"/>
                                             <outlet property="friendInfoImageView" destination="nZu-TW-CVL" id="Qrq-QT-dqO"/>
                                             <outlet property="likesView" destination="eTZ-0E-9XU" id="G9q-dU-KIn"/>
                                             <outlet property="nameFriendInfoLabel" destination="BQh-Ex-gOf" id="HSg-SG-shN"/>
