--- a/VeKa/Resourses/Storyboard/Base.lproj/Main.storyboard
+++ b/VeKa/Resourses/Storyboard/Base.lproj/Main.storyboard
@@ -117,6 +117,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="loadingView" destination="SMb-eg-yzY" id="qQA-7C-3Bt"/>
                         <outlet property="loginButton" destination="kHA-uI-pJW" id="FxY-Qf-qsP"/>
                         <outlet property="loginLabel" destination="Ip5-sv-Kr1" id="449-p8-4nu"/>
                         <outlet property="loginTextField" destination="XrP-qC-oOc" id="Lzc-D2-zSZ"/>
